--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Unit and integration testing with Jest First change on dev.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/betog21/Jest-Unit-And-IntegrationTestin#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
