--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Unit and integration testing with Jest First change on dev.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
