--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/betog21/Jest-Unit-And-IntegrationTestin#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.6.9"
+    "mongoose": "^5.6.9",
+    "node-mocks-http": "^1.7.6"
   },
   "devDependencies": {
     "jest": "^24.9.0"
